<resources>
    <string name="app_name">PosePerfect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_back_with_name">Welcome Back, %1$s!</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>


    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="intro_title">Welcome to PosePerfect!</string>
    <string name="intro_subtitle">We\'re here to help you improve your yoga practice with real-time feedback on your poses. Get started by setting up your camera and start practicing!</string>
    <string name="techniques_title">Master your poses</string>
    <string name="techniques_subtitle">Explore the various yoga poses, learn about correct alignments, and understand the benefits of each pose. Whether you are a beginner or an experienced yogi, you\'ll find helpful advice to enhance your practice.</string>
    <string name="health_title">Health benefits</string>
    <string name="health_subtitle">From stress management to improving flexibility and balance, discover how yoga can contribute to your overall wellbeing.</string>
    <string name="forget_pass">Provide your account email that you want to reset the password!\n</string>
    <string name="reset_success">Please check your email for instructions! (Make sure to check spam)</string>
    <string name="good_morning">Good Morning!</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_evening">Good Evening!</string>

    <string name="username">Username</string>
    <string name="howToUseMessage">How To Use</string>
    <string name="howToUseDesc">Checkout the Below Cards for Instructions on How to Use our App in order to Check your Pose.</string>
    <string name="vidsMssg">More Yoga Content...</string>
    <string name="vidsDesc">Checkout some more content on How to Strike the Perfect Pose!</string>
    <string name="step1">Select a Pose to begin checking your Accuracy\n</string>
    <string name="step2">And Let the Countdown Begin!</string>
    <string name="step6">Hit the</string>
    <string name="step3">Position the Camera approx 1.5m away</string>
    <string name="step7">Strike a Pose!</string>
    <string name="step8"><![CDATA[Wait for Verbal & on Screen Feedback and]]></string>
    <string name="step4">Hold Until Timer Finishes</string>
    <string name="step5">Then you will be redirected towards your Result.</string>
    <string name="T_Pose_health">☑ Improves balance.</string>
    <string name="Bridge_health">☑ Stretches the chest, neck, and spine.\n☑ Stimulates abdominal organs, lungs, and thyroids.\n☑ Improves digestion.\n☑ Relieves menstrual discomfort when done supported.\n☑ Reduces anxiety, fatigue, backache, headache, and insomnia. "</string>
    <string name="Boat_health">☑ Strengthens the abdomen, hip flexors, and spine. \n☑ Stimulates the kidneys, thyroid and intestines. \n☑ Helps relieve stress. \n☑ Improves digestion.</string>
    <string name="Boat_desc">1. From a seated position the feet are lifted up so that the thighs are angled about 45-50 degrees relative to the earth. \n2.The legs are straight. \n3. The tailbone is lengthened into the earth and the pubis pulls toward the navel. \n4. The shoulder blades are spread across the back and the hands reach straight forward making the arms are parallel to the earth. \n5. The chin is tipped slightly toward the sternum so that the base of the skull lifts lightly away from the back of the neck. \n6. Gaze is forward.</string>
    <string name="Bridge_desc">1. From a supine position, on your back, the hips are pressed up with the heels of the feet rooted into the earth close to the sits bones. \n2. The toes are actively lifted and the pelvis tucked. \n3. The thighs are parallel to the earth and the fingers are interlaced under the body with the ribcage lifted and the heart open. \n4. The back of the neck rests on the earth. \n5. The gaze is to the sky.</string>
    <string name="T_Pose_desc">1. Both arms reach outward with a light stretch. \n2. Arms should be 90 degrees to body.\n3. The knees, hips and shoulders aligned. \n4. Feet planted and forward.\n5. The gaze is forward.</string>
    <string name="Warrior_desc">1. From a standing position, the legs are separated into a wide stance. \n2. The front knee is bent in a 90-degree angle directly above the ankle. \n3. The back leg is extended and straight with the outside edge of the back foot gripping the earth in a 60-degree angle toward the front. \n4. The inner thighs are externally rotated away from each other.  \n5. The arms are extended out to the sides and are aligned with the shoulders in a straight line with the fingers reaching out. \n6. The gaze is toward the front fingers.</string>
    <string name="Warrior_health">☑ Strengthens and stretches the legs and ankles.\n☑ Stretches the chest, lungs, and shoulders.\n☑ Stimulates abdominal organs. \n☑ Relieves backaches. \n☑ Therapeutic for carpal tunnel syndrome, and sciatica.</string>
    <string name="channel_name">yogaReminderChannel</string>
    <string name="channel_description">Yoga Practice Reminder</string>
</resources>